# hh-monitor

./: .env.example  .gitignore  README.md  app  mailn.pen  pyproject.toml  requirements.txt  service-run
.github/workflows/: windows-exe.yml
config/: settings.json
exports/: ui_spec.md
launchd/: com.user.hhmonitor.plist.example
scripts/: build_windows_exe.bat  build_windows_exe.ps1  rebuild_macos_app.sh  windows_entry.py
src/hh_monitor/: app.py  auth.py  browser_support.py  crawler.py  export_xlsx.py  filters.py  hh_api.py  logging_conf.py  models.py  parser.py  report.py  runner.py  service_run.py  settings.py  storage.py  utils.py
tests/: test_app_detail_format.py  test_browser_support.py  test_dates.py  test_export_xlsx.py  test_filters.py  test_hash_diff.py  test_hh_api.py  test_parser_detail.py  test_parser_list.py  test_storage.py
tests/fixtures/: hh_search_page.html  hh_vacancy_page.html
