[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hh-monitor"
version = "0.1.1"
description = "Local GUI monitor and parser for hh.ru vacancies."
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12.3",
  "certifi>=2024.8.30",
  "lxml>=5.3.0",
  "openpyxl>=3.1.5",
  "playwright>=1.48.0",
  "pydantic>=2.9.2",
  "PySide6>=6.8.0",
  "snowballstemmer>=2.2.0",
  "tabulate>=0.9.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
